rightGradient repaired on small screens

--- a/assets/scss/components/_HeroSection.scss
+++ b/assets/scss/components/_HeroSection.scss
@@ -30,7 +30,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    background: linear-gradient(to top, $body-color 35%, transparent 65%);
+    background: linear-gradient(to top, $body-color 40%, transparent 60%);
   }
 }
 
